Fix the flickering buttons

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,5 +2,4 @@
 #about p{margin-bottom:20px; font-family: "Times New Roman", Times, serif; font-size: 12pt; line-height: 20px;}
 
 #about span{float:left;width:290px; display: block;overflow:auto; }
-#about span a{font-style:italic; //padding:2px;
-	}
+#about span a{font-style:italic;}
