--- a/app/assets/stylesheets/print.css
+++ b/app/assets/stylesheets/print.css
@@ -26,8 +26,6 @@ body{font-size:14px;}
 .meta{float:right; width:380px;}
 
 #rightcolumn p.meta-data{margin:0; padding:0;}
-/*#product-desc{padding:15px 0 0 0;}
-*/
 #rightcolumn a .more {color:#58A51D;}
 
 
