--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -30,8 +30,6 @@ input#product_image{border:none;}
 //Links
 a:link { text-decoration: none; }
 a:visited { text-decoration: none;}
-//a:hover { text-decoration: none;}
-//a:active { text-decoration: none;}
 
 
 
@@ -69,8 +67,9 @@ a:visited { text-decoration: none;}
 #rightcolumn {
 	width: 600px;
 	float: right;
-	padding-top: 20px;
+	padding: 20px 0;
 	margin-right:20px;
+	
 }
 
 #footer {
@@ -113,9 +112,7 @@ a:visited { text-decoration: none;}
 	padding-left:30px;
 	font-size: 11pt;
 } 
-#sidebar li a:hover {
-	color: #CCC;
-}
+#sidebar li a:hover { color: #CCC; }
 
 
 //Admin Links
@@ -144,7 +141,7 @@ a:visited { text-decoration: none;}
     font-size: 20pt;
     line-height: 20px;
     color: #58A51D;
-	margin-bottom:20px;
+		margin-bottom:20px;
 }
 
 #facebook{
@@ -154,11 +151,11 @@ a:visited { text-decoration: none;}
 
 
 //Products Listing
-#products { list-style-type: none;  padding: 0; }
-#products ul{ list-style-type: none;  padding:0; margin:0; }
-#products li{height:auto;  overflow:auto; padding:20px 0; margin:10px 0; border-top:1px solid gray; }
-#products .meta h3 a{ color:black;}
-.product h3{padding:0 0 2px 0; margin:0 0 2px 0;}
+#products { list-style-type: none; padding: 0; }
+#products ul{ list-style-type: none; padding:0; margin:0; }
+#products li{ height:auto; overflow:auto; padding:20px 0; margin:10px 0; border-top:1px solid gray; }
+#products .meta h3 a{ color:black; }
+.product h3{ padding:0 0 2px 0; margin:0 0 2px 0; }
 
 #products .meta ul li{margin:0 0 7px 0; padding:0; border:none;}
 #products .meta ul p{margin:0 0 7px 0; }
@@ -170,9 +167,7 @@ a:visited { text-decoration: none;}
 
 //Edit Product Form
 #product .field {margin:5px 0;}
-#product .dimensions input{}
 #product .table-dimensions input{width:50px;}
-
 
 
 //Show Product
@@ -248,8 +243,6 @@ ul{margin:0; padding:0; list-style:none;}
 #sidebar form{margin:0;}
 
 //categories button to disable
-#categories input{
-	}
 #categories form input{
 	float:right; 
 	color:red; 
@@ -259,8 +252,6 @@ ul{margin:0; padding:0; list-style:none;}
 	margin:0px;
 	line-height:11px;
 	}	
-#categories input:hover{
-	}
 
 #disabled-categories li{ margin:5px; padding:5px; border:1px dashed gray;}
 
@@ -296,10 +287,8 @@ div#header ul#nav li.active a {
 
 #sidebar li.admin-link a{color:red; font-style:italic;}
 
-#admin-console{}
 #admin-console li{ width:200px; display: inline; position: relative; padding:10px;  border:1px solid gray; }
 #admin-console li a{font-size:18px;}
-#admin-console li a:hover{ }
 
 
 //Contact
@@ -340,7 +329,7 @@ div#header ul#nav li.active a {
 #notifications{
 	font-family: "Times New Roman", Times, serif;
 	margin: 0 auto;
-    left: 0; right: 0;
+  left: 0; right: 0;
 	position:absolute; 
 	font-size:16px; 
 	width:500px;
@@ -360,9 +349,8 @@ div#header ul#nav li.active a {
 
 
 //Back && Status
-.back{position:absolute; margin-top:-30px; font-size:20px;}
-.status{position:absolute; margin-top:-30px; margin-left:75px; font-size:20px;}
-
+//.back{position:absolute; margin-top:-30px; font-size:20px;}
+//.status{position:absolute; margin-top:-30px; margin-left:75px; font-size:20px;}
 
 
 
@@ -370,7 +358,7 @@ div#header ul#nav li.active a {
 .left-column{float:left; width:300px;}
 .right-column{float:right; width:300px;}
 
-/*#Slideshow--------------------------------------------*/
+//#Slideshow--------------------------------------------
 #slideshow { padding: 0; } 
 #slideshow img {
     padding: 0 10px 10px 0px;
@@ -407,8 +395,6 @@ a.contact {margin-left:80px; width: 78px; background: url('navigation/contact2.g
 a.contact:hover { background-position: 0 35px; }
 
 
-
-
 //AJAX
 #spinner {
   background:#000;
@@ -426,7 +412,7 @@ a.contact:hover { background-position: 0 35px; }
   position:absolute;
   text-align:center;
   top:20%;
-  /*width:200px;*/
+//	width:200px;
   z-index:999;
 }
 
@@ -440,13 +426,18 @@ html>body #spinner {
   vertical-align: bottom;
 }
 
-a.button{display:inline;}
+//a.button{display:inline;}
+
 .print_link {color:#58A51D;}
 .print_link:hover{color: #54B919;}
-//pagination
-/*  --------------------------------------------------
-    Pagination
-    -------------------------------------------------- */ 
+dd.show a.delete{ color:red; display:inline; padding:3px 5px;}
+//dd.show a.delete:hover{color:gray; }
+
+.button{display:inline; }
+
+// --------------------------------------------------
+//    Pagination      -------------------------------
+// --------------------------------------------------
 div.top-pagination{display:block;	position:absolute; margin-top:-30px; font-size:20px;}
 div.bottom-pagination{display:block;font-size:20px; margin-bottom:20px;}
     .pagination { display: block; height: 24px; margin-left: -5px; }
